--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2019.11.28
 chardet==3.0.4
 colorama==0.4.3
 contextlib2==0.6.0
+dateparser==0.7.6
 decorator==4.4.2
 distlib==0.3.0
 distro==1.4.0
